--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         border-radius: 5px;
         max-width: 600px;
         min-width: 400px;
-        height: 370px;
+        min-height: 370px;
       }
 
       h1 {
@@ -134,6 +134,8 @@
       .preview-container {
         margin-top: 20px;
         text-align: left;
+        width: 200px;
+        margin: auto;
       }
 
       .preview-container .preview-item {
